# QuizGazer

./: .gitignore  CLAUDE.md  QuizGazer历史记录系统扩展方案.md  README.md  config.ini.example  export_quiz_to_csv.py  main.py  main.spec  ocr_knowledge.py  pyproject.toml  requirements.txt  test.py
.kiro/specs/frontend-backend-refactor/: design.md  requirements.md  tasks.md
.kiro/specs/knowledge-base-rag/: design.md  requirements.md  tasks.md
core/: ai_services.py  demo_ai_services_integration.py  screenshot_handler.py  test_ai_services_integration.py
core/knowledge_base/: RAG_PIPELINE_README.md  SETTINGS_AND_ERROR_HANDLING_README.md  __init__.py  cache_manager.py  demo_rag_pipeline.py  document_processor.py  embedding_service.py  error_handling.py  manager.py  models.py  optimized_manager.py  performance_monitor.py  rag_pipeline.py  retriever.py  task_manager.py  test_error_handling.py  test_rag_pipeline.py  vector_store.py
docs/: Knowledge_Base_Implementation_Plan.md  api_configuration_examples.md  developer_guide.md  knowledge_base_user_guide.md  troubleshooting_guide.md
docs/sample_documents/: README.md  ai_fundamentals.md  faq_general.csv
tests/: run_all_tests.py
ui/: KNOWLEDGE_BASE_UI_README.md  knowledge_base_panel.py  knowledge_base_panel_simple.py  knowledge_base_settings.py  knowledge_base_settings_simple.py  main_window.py  test_knowledge_base_ui.py
utils/: checkbox_utils.py  config_manager.py
web/: CHANGELOG_AUTH.md  README_AUTH.md  start.bat  start.sh
web/backend/: .env.example  .gitignore  auth.py  database.py  main.py  manage_users.py  models.py  requirements.txt  schemas.py
web/backend/api/endpoints/: auth.py  chromadb.py  health.py  quiz.py  stats.py  websocket.py
web/frontend/: app.js  chromadb.html  chromadb.js  index.html  login.html  login.js
