[project]
name = "quizgazer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.26.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "mss>=10.0.0",
    "pillow>=11.3.0",
    "pyside6>=6.9.1",
]
