[project]
name = "quizgazer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=23.2.1",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "chromadb>=1.0.16",
    "fastapi>=0.104.0",
    "google-genai>=1.26.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.8",
    "mss>=10.0.0",
    "pandas>=2.3.1",
    "passlib[bcrypt]>=1.7.4",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "pillow>=11.3.0",
    "pydantic>=2.5.0",
    "pypdf2>=3.0.1",
    "pyside6>=6.9.1",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.24.0",
]
